r2o-fastapi-k8s-main/fastapi-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /v1/api
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
